--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@ html, body {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     z-index: 1000; /* Ensure it appears on top of the map */
     width: 300px; /* Limit the width of the popup card */
+    margin-bottom: 0;
   }
   
   .popup-card h4 {
@@ -86,6 +87,22 @@ html, body {
     cursor: pointer;
   }
 
+  .recenter-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 1000; /* Make sure it appears above the map */
+  }
+  
+  .recenter-button:hover {
+    background-color: #f0f0f0;
+  }
+  
 /* Adjust for different devices */
 @media only screen and (max-width: 1200px) {
     .map-container {
